# birthday-simulation

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  EmbedMarkdown.Cmake  Makefile  README.md
.github/workflows/: build-linux.yml  build-windows.yml  docs.yml  release.yml  version.yml
include/: art.h  utils.h  version.h
src/: art.c  explanation.md  main.c  utils.c
src/pages/: attack.c  attack.h  explanation.c  explanation.h  paradox.c  paradox.h  system_info.c  system_info.h
src/ui/: art.c  art.h  error.c  error.h  footer.c  footer.h  form.c  form.h  header.c  header.h  layout.c  layout.h  menu.c  menu.h
src/ui/attack/: hash_collision.c  hash_collision.h  hash_collision_compute.c  hash_collision_compute.h  hash_collision_table.c  hash_collision_table.h  hash_config.c  hash_config.h  hash_menu.c  hash_menu.h
src/ui/home/: main_menu.c  main_menu.h
src/ui/paradox/: paradox_form.c  paradox_form.h
src/utils/: hash_function.c  hash_function.h  paradox_math.c  paradox_math.h  resize.c  resize.h  utils.c  utils.h
www/: index.html
